# python-devops

./: README.md
test_script/: main.py
text_analyzer/: .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  Taskfile.yml  pyproject.toml  requirements.txt  setup.py  setup.py.txt
text_analyzer/CI/: Jenkinsfile
text_analyzer/TextAnalyzer/core/: __init__.py  analyzer.py
