[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textanalyzer"
version = "9.9.6"
description = "A Python library for text processing and analysis"
authors = [
  { name="Sivan", email="Sivan.gruner@gmail.com" }
]
readme = "README.md"  # Optional
requires-python = ">=3.7"
license = { text = "MIT" }

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]

dependencies = [
  "requests",
  "beautifulsoup4>=4.9.0",
  "nltk>=3.6.0"
]

[tool.setuptools.packages.find]
where = ["."]
